# test-generator

./: .gitignore  Cargo.toml  build-win.sh  cross-compile.sh  example.toml  project.toml
docs/: .gitignore  .~lock.maika_vi_da_eba_mon.odt#  build-pdf.sh  cross-compile.tex  deps.sh  firstpage.tex  images.tex  intro.tex  libraries.tex  maika_vi_da_eba_mon.odt  main.tex  optimizations.tex  sources.bib  thesis.tex
docs/setup/: git.tex  rust-install.tex  text-editor.tex
docs/used_stack/: egui.tex  genpdf.tex  rust.tex
hell-core/: Cargo.toml  README.md  example.toml  live-reload.html
hell-core/src/: data.rs  elements.rs  main.rs
hell-ui/: Cargo.toml
hell-ui/src/: main.rs
src/: data.rs  gui.rs  main.rs  pdf_elements.rs  pdf_gen.rs  perf_test.rs  settings.rs  ui_elements.rs
