[package]
name = "test-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"
clap = { version = "4.1.8", features = ["derive"] }
rckive-genpdf = "0.4.0"
rand = "0.8.5"

[dependencies.druid]
version = "0.8.3"
features = ["im", "serde"]
