[package]
name = "test-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1.8", features = ["derive"] }
rckive-genpdf = "0.4.0"
rand = "0.8.5"
tui = "0.19"
crossterm = "0.25"
