[package]
name = "hell-core"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
toml = "0.7.2"
rand = "0.8.5"
rckive-genpdf = "0.4.0"
